# GenSub

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONVENTIONS.md  Dockerfile  LICENSE  README.md  compose.gpu.yaml.example  compose.override.yaml.example  compose.yaml
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: config.py  events.py  health.py  jobs.py  media.py  memo.py  schemas.py  search.py  segments.py
backend/app/core/: db.py  settings.py
backend/app/models/: __init__.py  job.py  memo.py  segment.py
backend/app/services/: ass_style.py  audio.py  backup.py  burn.py  cleanup.py  clip.py  downloader.py  (+10 more)
backend/tests/: test_ass_style.py  test_audio.py  test_backup.py  test_burn.py  test_burn_trigger.py  test_cleanup.py  test_clip.py  test_clip_endpoint.py  test_config_endpoint.py  test_db.py  test_downloader.py  test_events_sse.py  test_health.py  test_job_delete_cascades_memos.py  test_job_state.py  test_jobs_create.py  test_jobs_lifecycle.py  test_jobs_list_recent.py  test_jobs_read.py  test_jobs_service_pin.py  test_jobs_service_request_burn.py  test_jobs_upload.py  test_media_mux.py  test_media_subtitles.py  test_media_video.py  test_memo_endpoint_delete.py  test_memo_endpoint_list.py  test_memo_endpoint_post.py  test_memo_model.py  test_memo_schemas.py  test_memo_service_crud.py  test_memo_service_global.py  test_memo_service_toggle.py  test_models_job.py  test_models_segment.py  test_muxer.py  test_pipeline_burn.py  test_pipeline_burn_cancel.py  test_pipeline_orchestration.py  test_regenerate.py  (+10 more)
backend/worker/: main.py
(+90 files in other folders)
