[project]
name = "gensub-backend"
version = "0.1.0"
description = "GenSub backend - FastAPI API + Whisper worker"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.16",
    "pydantic-settings>=2.3",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.1",
    "yt-dlp>=2024.7.1",
    "faster-whisper>=1.0.3",
    "ffmpeg-python>=0.2",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
